Fix: Table select overflow issue (#1073)

--- a/packages/reports/app/styles/navi-reports/components/navi-table-select-trigger.less
+++ b/packages/reports/app/styles/navi-reports/components/navi-table-select-trigger.less
@@ -1,11 +1,12 @@
 /**
- * Copyright 2019, Yahoo Holdings Inc.
+ * Copyright 2020, Yahoo Holdings Inc.
  * Licensed under the terms of the MIT license. See accompanying LICENSE.md file for terms.
  */
 .navi-table-select-trigger {
   align-items: center;
   display: flex;
   flex: 1;
+  min-width: 0;
   padding: 0 10px;
 
   &__label {
